# parallax

./: .gitignore  README.md  pyproject.toml
bench/: quality_ab.py  throughput.py
config/: qwen2.5-14b-l40s.yaml  qwen2.5-32b-a100.yaml  qwen2.5-7b-snapshot.yaml  qwen2.5-7b.yaml
docs/: architecture.md  benchmarks.md  model-research.md  operations.md  roadmap.md
examples/: curl_examples.sh  dspy_relevance.py
parallax/: __init__.py  app.py  config.py
src/parallax/: __init__.py  app.py  cli.py  config.py
tests/: test_dspy.py
