[project]
name = "parallax"
version = "0.1.0"
description = "Self-hosted OpenAI-compatible vLLM endpoints on Modal"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.66",
    "pyyaml>=6",
]

[project.optional-dependencies]
test = [
    "dspy-ai>=2.5",
    "litellm>=1.50",
    "openai>=1.50",
    "httpx>=0.27",
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["parallax*"]
