[project]
name = "parallax"
version = "0.2.0"
description = "Self-hosted OpenAI-compatible vLLM endpoints on Modal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "DmitryBe" }]
dependencies = [
    "modal>=0.66",
    "pyyaml>=6",
    "click>=8",
]

[project.optional-dependencies]
test = [
    "dspy-ai>=2.5",
    "litellm>=1.50",
    "openai>=1.50",
    "httpx>=0.27",
    "pytest>=8",
]

[project.scripts]
parallax = "parallax.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["parallax*"]
